# solarwinds-chat

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PHASE_4_COMPLETION.md  README.md  START_HERE.md  STREAMLIT_SETUP.md  docker-README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  start_backend.bat  start_frontend.bat  streamlit_app.py  test_mock_sync.py  test_system.py
.claude/: settings.local.json
app/: __init__.py  main.py  main_quick.py  main_simple.py
app/api/v1/: __init__.py  chat.py  chat_simple.py  health.py  health_simple.py  metrics.py  solutions.py
app/core/: config.py  exceptions.py  logging.py
app/models/: schemas.py
app/services/: __init__.py  embedding.py  indexing_service.py  llm.py  mock_data.py  solarwinds.py  sync_service.py  text_processing.py  vector_store.py
backend/: .env  .gitignore  pyproject.toml  run.py
backend/app/api/: routes.py
backend/app/core/: config.py
chroma_db/: chroma.sqlite3
src/app/: main.py
src/app/api/: routes.py
src/app/models/: base.py
tests/: conftest.py
tests/api/: __init__.py  test_chat.py  test_health.py  test_solutions.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_schemas.py
