[project]
name = "solarwinds-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "chromadb>=0.4",
    "fastapi>=0.111",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "ollama>=0.4.0",
    "openai>=1.98.0",
    "psutil>=7.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.2.0",
    "requests>=2.31.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.39.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.8.0",
    "torch>=2.7.1",
    "unstructured>=0.18.11",
    "uvicorn[standard]>=0.35.0",
]
