[project]
name = "solarwinds-chat"
version = "0.1.0"
description = "SolarWinds IT Solutions Chatbot with RAG-powered AI assistance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "chromadb>=0.4",
    "fastapi>=0.111",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "ollama>=0.4.0",
    "openai>=1.98.0",
    "psutil>=7.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.2.0",
    "requests>=2.31.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.39.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.8.0",
    "torch>=2.7.1",
    "unstructured>=0.18.11",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "api: API endpoint tests",
    "llm: LLM service tests",
    "vector: Vector store tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
